# configure-crud-lambda

./: README.md  main_regional.tf  main_regional_https_snippet.tf  main_regional_private.tf  main_tf_file.txt  main_uri_path.tf  main_uri_path_simple.tf  test_api_script.sh  variables.tf  variables_tf_file.txt
backup_tf_files/: HOW-THIS-WORKS.md  Makefile  main_regional.tf  main_regional_private.tf  pyproject.toml
backup_tf_files/ml-training/: Makefile  README.md  analyze.py  config.py  evaluate.py  explain.py  features.py  flow.py  requirements.txt  train.py  validate.py
backup_tf_files/ml-training/output/: analysis.json  quality_waf_rg_hsbc_custom_v3.json  shap_report.json  waf_rg_hsbc_custom_v3.json
backup_tf_files/ml-training/output_curl/: curl_502_tests.sh  curl_base64.sh  curl_cmdi.sh  curl_lfi.sh  curl_rfi.sh  curl_sqli.sh  curl_ssti.sh  curl_xss.sh
backup_tf_files/modules/test_custom_v3/: waf_requirements.yaml
backup_tf_files/reports/: waf_rg_hsbc_custom_v3_junit.xml
backup_tf_files/tests/: __init__.py  conftest.py
backup_tf_files/tests/waf/: __init__.py  cloudwatch_client.py  http_client.py  models.py  test_runner.py  test_waf_requirements.py
